# xmath_walkthrough

./: .gitignore  .gitmodules  CHANGELOG.rst  CMakeLists.txt  LICENSE.rst  README.md  create_wav.py  index.rst  settings.json  west.yml
.github/workflows/: docs.yml
apps/: CMakeLists.txt  intro.md  observe_perf.py  run_example.py
apps/common/: CMakeLists.txt  main.xc
apps/common/file_utils/: fileio.c  wav_utils.c  wav_utils.h
apps/common/framing/: framing.c  framing.h
apps/common/misc/: common.h  misc_func.h
apps/common/wav_proc/: wav_proc.c  wav_proc.h
apps/perf/: .gitignore
apps/stage0/: CMakeLists.txt  filter_coef.c  index.md  stage0.c
apps/stage1/: CMakeLists.txt  filter_coef.c  index.md  part_A.c  part_B.c  part_C.c  stage1.c
apps/stage10/: CMakeLists.txt  index.md  stage10.c
apps/stage11/: CMakeLists.txt  index.md  stage11.c
apps/stage12/: CMakeLists.txt  filter_coef.c  index.md  stage12.c
apps/stage2/: CMakeLists.txt  filter_coef.c  index.md  int32_dot.S  part_A.c  part_B.c  part_C.c  stage2.c
apps/stage3/: CMakeLists.txt  filter_coef.c  index.md  part_a.c  part_c.c  stage3.c
apps/stage4/: CMakeLists.txt  index.md  stage4.c
apps/stage5/: CMakeLists.txt  filter_coef.c  index.md  stage5.c
apps/stage6/: CMakeLists.txt  stage6.c
apps/stage7/: CMakeLists.txt  filter_coef.c  index.md  stage7.c
apps/stage8/: CMakeLists.txt  index.md  stage8.c
apps/stage9/: CMakeLists.txt  index.md  stage9.c  stage9.xc
apps/wav/: .gitignore
doc/: .gitignore  Doxyfile.inc  app_structure.md  building.md  common.md  conf.py  filter.md  index.rst  intro.md  part1.md  part1A.md  part1B.md  part1C.md  part2.md  part2A.md  part2B.md  part2C.md  part3.md  part3A.md  part3B.md  part3C.md  part4.md  part4A.md  part4B.md  part4C.md  partA.md  partB.md  partC.md  partD.md  perf.md  stage0.md  stage1.md  stage10.md  stage11.md  stage12.md  stage2.md  stage3.md  stage4.md  stage5.md  stage6.md  (+5 more)
doc/tutorial/: building.md  common.md  filter.md  index.rst  intro.md  lib_xcore_math_doc.rst  part1.md  part1A.md  part1B.md  part1C.md  part1_intro.md  part2.md  part2A.md  part2B.md  part2C.md  part2_intro.md  part3.md  part3A.md  part3B.md  part3C.md  part3_concepts.md  part3_intro.md  part3_on_xcore.md  part4.md  part4A.md  part4B.md  part4C.md  part4_intro.md  perf.md  sw_organization.md  xs3_vpu.md
doc/tutorial/appendix/: appendixA.md
script/: CMakeLists.txt  create_wav.py  observe_perf.py  plot_results.py  run_app.py
src/: CMakeLists.txt
src/appendixA/: CMakeLists.txt
src/appendixA/appA1/: CMakeLists.txt  appA1.h  filter_float.c  filter_wrapped.c  main.c
src/appendixA/appA2/: CMakeLists.txt  appA2.h  fft_bfp.c  fft_float.c  fft_wrapped.c  floating_fft.c  floating_fft.h  main.c
src/common/: CMakeLists.txt  main.xc
src/common/file_utils/: fileio.c  fileio.h  wav_utils.c  wav_utils.h
src/common/filters/: filter_coef_double.c  filter_coef_float.c  filter_coef_q2_30.c  filter_coef_q4_28.c
src/common/misc/: common.h  misc_func.h
src/common/timing/: timing.c  timing.h
src/common/wav_io/: wav_io.c  wav_io.h
src/common/wav_proc/: wav_proc.c
src/part1A/: CMakeLists.txt  part1A.c
src/part1B/: CMakeLists.txt  part1B.c
src/part1C/: CMakeLists.txt  part1C.c
src/part2A/: CMakeLists.txt  part2A.c
src/part2B/: CMakeLists.txt  int32_dot.S  part2B.c
src/part2C/: CMakeLists.txt  part2C.c
src/part3A/: CMakeLists.txt  part3A.c
src/part3B/: CMakeLists.txt  part3B.c
src/part3C/: CMakeLists.txt  part3C.c
src/part4A/: CMakeLists.txt  part4A.c  part4A.xc
src/part4B/: CMakeLists.txt  part4B.c
src/part4C/: CMakeLists.txt  part4C.c  userFilter.c  userFilter.h
src/stage0/: CMakeLists.txt  stage0.c
src/stage1/: CMakeLists.txt  stage1.c
src/stage10/: CMakeLists.txt  stage10.c
src/stage11/: CMakeLists.txt  coef.csv  stage11.c  userFilter.c  userFilter.h
src/stage12/: CMakeLists.txt  stage12.c
src/stage2/: CMakeLists.txt  stage2.c
src/stage3/: CMakeLists.txt  stage3.c
src/stage4/: CMakeLists.txt  int32_dot.S  stage4.c
src/stage5/: CMakeLists.txt  stage5.c
src/stage6/: CMakeLists.txt  stage6.c
src/stage7/: CMakeLists.txt  stage7.c
src/stage8/: CMakeLists.txt  stage8.c
src/stage9/: CMakeLists.txt  stage9.c  stage9.xc
